After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699767 - typefind: send stream-start after caps
typefind: send stream-start after caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.x
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-06 16:33 UTC by Nicolas Dufresne (ndufresne)
Modified: 2013-05-07 07:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
typefind: Send stream-start before anything else (1.96 KB, patch)
2013-05-06 22:53 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2013-05-06 16:33:14 UTC
The typefind element let segment event go through and sends caps later. This may cause miss ordering of sticky event in pads. It should, arguably, delay the segment event (and buffer, if not already) until it has send the caps event.
Comment 1 Sebastian Dröge (slomo) 2013-05-06 16:48:29 UTC
Didn't I just fix that in master last week?
Comment 2 Nicolas Dufresne (ndufresne) 2013-05-06 17:24:34 UTC
I've just updated now and I still get the miss-ordering. To reproduce:

Apply this patch to gstreamer, https://bug688188.bugzilla-attachments.gnome.org/attachment.cgi?id=243398 (it will add a warning when sticky event are miss-ordered and run the following pipline (source file type is not important):

GST_DEBUG=2 gst-launch-1.0 filesrc location=test.webm ! typefind ! fakesink
Comment 3 Nicolas Dufresne (ndufresne) 2013-05-06 17:36:50 UTC
It actually behaves differently with the update, it sends the stream-start after the caps. Updating title accordingly.
Comment 4 Nicolas Dufresne (ndufresne) 2013-05-06 22:53:54 UTC
Created attachment 243442 [details] [review]
typefind: Send stream-start before anything else

I'm now sending the stream-start when the streaming thread is up for the first time.
Comment 5 Sebastian Dröge (slomo) 2013-05-07 07:17:56 UTC
Thanks for spotting this :) I missed that last week

commit ba354f6b03f6862c502f2d127c0a552a72963cb1
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Mon May 6 18:47:44 2013 -0400

    typefind: Send stream-start before anything else
    
    To do so, send stream-start when the streaming thread goes up for the first
    time.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699767